[tool.poetry]
name = "wren-ai-service"
version = "0.29.3"
description = ""
authors = ["dev@getwren.ai"]
license = "AGPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.*, <3.13"
fastapi = "^0.135.2"
uvicorn = {extras = ["standard"], version = "^0.42.0"} # Litellm requires uvicorn < 0.30.0
python-dotenv = "^1.2.2"
haystack-ai = "==2.26.1"
openai = "^2.30.0"
qdrant-haystack = "^10.3.0"
backoff = "^2.2.1"
tqdm = "^4.67.3"
numpy = "^2.4.3"
sqlparse = "^0.5.4"
orjson = "^3.11.7"
sf-hamilton = {version = "^1.69.0"}
aiohttp = {extras = ["speedups"], version = "^3.13.3"}
ollama-haystack = "^1.1.0"
langfuse = "^4.0.1"
ollama = "^0.6.1"
toml = "^0.10.2"
cachetools = "^6.2.6"
pyyaml = "^6.0.2"
pydantic-settings = "^2.13.1"
google-auth = "^2.49.1"
tiktoken = "^0.12.0"
jsonschema = "^4.26.0"
litellm = "^1.82.6"
boto3 = "^1.42.76" # Litellm requires boto3 = 1.34.34
qdrant-client = ">=1.12.0,<2.0.0"
filelock = "^3.25.2"
urllib3 = ">=2.6.3"
werkzeug = ">=3.1.5"  # CVE: safe_join Windows device name vulnerability
marshmallow = ">=3.26.2"  # CVE: Schema.load(many=True) DoS
pillow = ">=12.1.1"  # CVE: out-of-bounds write when loading PSD images
protobuf = ">=5.29.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
streamlit = "^1.55.0"
watchdog = "^6.0.0"
pandas = "^2.2.2"
matplotlib = "^3.10.8"
sseclient-py = "^1.9.0"
dspy-ai = "^3.1.3"
requests = "^2.33.0"
extra-streamlit-components = "^0.1.71"
deepeval = "^3.9.3"
tomlkit = "^0.14.0"
nltk = "^3.9.4"
psycopg2 = "^2.9.10"

[tool.poetry.group.eval.dependencies]
gitpython = "^3.1.46"
plotly = "^6.6.0"
nbformat = "^5.1.3"
ipykernel = "^7.2.0"
itables = "^2.7.3"
gdown = "^5.2.1"
streamlit-tags = "^1.2.8"
docker = "^7.1.0"

[tool.poetry.group.test.dependencies]
locust = "^2.43.3"
pytest = "^8.3.0"
pytest-cov = "^7.1.0"
pytest-asyncio = "^1.3.0"
aioresponses = "^0.7.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
