[package]
name = "wren-core-base"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "Shared MDL manifest types for the Wren semantic engine"
homepage = "https://getwren.ai"
repository = "https://github.com/Canner/WrenAI"
keywords = ["sql", "semantic-layer", "mdl", "manifest", "wren"]
categories = ["database"]

[features]
python-binding = ["dep:pyo3"]
default = []

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"], optional = true }
serde = { version = "1.0.201", features = ["derive", "rc"] }
wren-manifest-macro = { path = "manifest-macro", version = "0.2.0" }
serde_json = { version = "1.0.117" }
serde_with = { version = "3.11.0" }
sqlparser = { version = "0.58.0", features = ["visitor"] }


[lib]
name = "wren_core_base"
path = "src/lib.rs"
