[package]
name = "wren-core-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Canner <dev@cannerdata.com>"]
license = "Apache-2.0"
description = "Wren Engine compiled to WebAssembly — browser-native semantic layer + query execution"
repository = "https://github.com/Canner/WrenAI"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# --- DataFusion: upstream latest (NOT Canner fork) ---
# The WASM build does not need the unparser fixes in the Canner fork,
# because DataFusion is the final execution engine here (no SQL generation).
# Using latest upstream for best WASM compatibility and performance.
# DataFusion WITHOUT parquet feature — parquet's default-features=true in
# DataFusion enables zstd (C library) which cannot compile to WASM.
# We read Parquet bytes → Arrow RecordBatch → MemTable ourselves.
datafusion = { version = "53", default-features = false, features = [
    "nested_expressions",
    "crypto_expressions",
    "datetime_expressions",
    "encoding_expressions",
    "regex_expressions",
    "unicode_expressions",
    "parquet",
    "sql",
] }

object_store = { version = "0.13.1", features = ["aws", "http"] }

# --- Arrow / Parquet ---
arrow = { version = "58.1", default-features = false, features = ["json", "csv"] }
# No zstd: requires C library (zstd-sys) which cannot compile to WASM.
# Snappy and LZ4 are pure Rust and WASM-compatible.
parquet = { version = "58.1", default-features = false, features = ["arrow", "snap", "lz4"] }

# --- WASM bindings ---
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# --- Async runtime (WASM-compatible, no multi-thread) ---
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }

# --- Wren semantic layer (no multi-thread for WASM) ---
wren-core = { path = "../wren-core/core", default-features = false }

# --- Shared types (no DataFusion dependency, no Python binding) ---
wren-core-base = { path = "../wren-core-base" }

# --- Bytes (for Parquet reader) ---
bytes = "1"

# --- Serde ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Time: chrono needs wasmbind to use js_sys::Date instead of SystemTime ---
chrono = { version = "0.4", features = ["wasmbind"] }

# --- URL parsing ---
url = "2"

# --- Logging ---
log = "0.4"

# --- WASM-specific: all getrandom versions need JS backend for wasm32 ---
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

