[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wren-pydantic"
version = "0.2.1"
description = "Pydantic AI integration for Wren AI Core — attach a CLI-prepared Wren project to your agent in three lines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Wren AI", email = "contact@getwren.ai" }]
keywords = [
  "wrenai", "wren", "pydantic-ai", "pydantic", "agent", "ai-agent",
  "sql", "context-layer", "semantic", "mdl", "data-modeling", "analytics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  # Core: provides WrenEngine, MemoryStore, profile resolution, MDL handling.
  "wrenai>=0.7.0",
  # Pydantic AI v1 is GA. Pin major so breaking changes are an explicit
  # opt-in via CHANGELOG.
  "pydantic-ai>=1.0,<2.0",
  "pydantic>=2",
]

[project.optional-dependencies]
# ── Datasource pass-through extras ────────────────────────────────────────
# Pick the one matching your project's `data_source` (in wren_project.yml).
# These chain through to the matching `wrenai[<datasource>]` extra so
# you don't have to install the connector dependency twice.
#
#   pip install "wren-pydantic[mysql]"
#   pip install "wren-pydantic[mysql,memory]"
#
# DuckDB is built into wrenai — no extra needed.
postgres   = ["wrenai[postgres]>=0.7.0"]
mysql      = ["wrenai[mysql]>=0.7.0"]
bigquery   = ["wrenai[bigquery]>=0.7.0"]
snowflake  = ["wrenai[snowflake]>=0.7.0"]
clickhouse = ["wrenai[clickhouse]>=0.7.0"]
trino      = ["wrenai[trino]>=0.7.0"]
mssql      = ["wrenai[mssql]>=0.7.0"]
databricks = ["wrenai[databricks]>=0.7.0"]
redshift   = ["wrenai[redshift]>=0.7.0"]
spark      = ["wrenai[spark]>=0.7.0"]
athena     = ["wrenai[athena]>=0.7.0"]
oracle     = ["wrenai[oracle]>=0.7.0"]

# ── Memory extra ──────────────────────────────────────────────────────────
# Required to use the three memory tools (wren_fetch_context,
# wren_recall_queries, wren_store_query). Pulls in LanceDB and the
# sentence-transformer model deps via wrenai.
#
# Without this, the toolkit auto-detects no memory and exposes only the
# three runtime tools.
memory = ["wrenai[memory]>=0.7.0"]

# ── Convenience aggregate ─────────────────────────────────────────────────
# Installs every datasource + memory at once. Useful for CI / examples,
# heavyweight for production where you usually want only one datasource.
all = ["wrenai[all]>=0.7.0"]

# ── Dev / test deps ───────────────────────────────────────────────────────
dev = [
  "pytest>=8",
  "pytest-mock>=3",
  "ruff>=0.4",
  # Tests run real DuckDB + LanceDB integrations, so memory deps are required.
  "wrenai[memory]>=0.7.0",
]

[project.urls]
Homepage      = "https://getwren.ai"
Documentation = "https://github.com/Canner/WrenAI/tree/main/sdk/wren-pydantic#readme"
Repository    = "https://github.com/Canner/WrenAI"
Issues        = "https://github.com/Canner/WrenAI/issues"
Changelog     = "https://github.com/Canner/WrenAI/blob/main/sdk/wren-pydantic/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/wren_pydantic"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "PLC"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# Default run skips tests marked `slow` (currently the LanceDB integration
# tests which load a sentence-transformer model, ~30-40s). Run them explicitly
# with `pytest -m slow` or `pytest -m "slow or not slow"` for everything.
addopts = "-ra -m \"not slow\""
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
