[tool.poetry]
name = "wren-ai-service-demo"
version = "0.1.0"
description = ""
authors = ["Jimmy Yeh <jimmy.yeh@cannerdata.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
sqlparse = "^0.5.0"
streamlit = "^1.32.2"
watchdog = "^4.0.0"
python-dotenv = "^1.0.1"
orjson = "^3.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
