[tool.poetry]
name = "eval"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "APGL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.12.0"
shiny = "==0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
