[tool.poetry]
name = "eval"
version = "0.1.0"
description = ""
authors = ["Jimmy Yeh <jimmy.yeh@cannerdata.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "==3.12.0"
streamlit = "==1.34.0"
watchdog = "==4.0.0"
orjson = "==3.10.3"
pydantic = "==2.7.2"
openai = "==1.30.1"
python-dotenv = "==1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
