[tool.poetry]
name = "wren-ai-service-demo"
version = "0.1.0"
description = ""
authors = ["Jimmy Yeh <jimmy.yeh@cannerdata.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gdown = "^5.1.0"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
sqlparse = "^0.4.4"
streamlit = "^1.32.2"
watchdog = "^4.0.0"
sqlglot = "^22.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
