[package]
name = "wren-manifest-macro"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
syn = { version = "2.0", default-features = false, features = [
  "printing",
  "parsing",
  "proc-macro",
] }
quote = "1.0"

[lib]
proc-macro = true
name = "manifest_macro"
path = "src/lib.rs"